# FileSync

./: .gitignore  CMakeLists.txt  README.md  filesync.db  technical_summary.md
protos/: crdt.proto  filesync.proto
src/client/: client.cpp  client.h  main.cpp
src/common/: crdt_manager.cpp  crdt_manager.h  utils.cpp  utils.h
src/db/: db_manager.cpp  db_manager.h
src/server/: main.cpp  server.cpp  server.h
storage/backup/: README.md  h -u origin File-Upload-Download  sync_test.txt
